--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 nav {
-  background-color: aquamarine;
-  padding: 1 rem 2 rem;
-  box-shadow: 0px 0px 2px 1px black;
+  background-color: navy;
+  padding: 1rem 2rem;
+  box-shadow: 0px 0px 2px 1px gray;
+  border-radius: 10px;
 }
 
 nav ul{
@@ -15,7 +16,7 @@ nav li{
 }
 
 nav a{
-  color: blue;
+  color: white;
   text-decoration: none;
   font-weight: 500;
   padding: 0.5rem 1rem;
@@ -33,6 +34,7 @@ nav a:hover{
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 2rem;
   margin-top: 2rem;
+  background-color: gray;
 }
 
 #lista-productos li{
@@ -40,8 +42,15 @@ nav a:hover{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: white;
+  background-color: lightblue;
   padding: 1rem;
   border-radius: 5px;
   box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.1);
+}
+
+footer{
+  text-align: center;
+  background-color: navy;
+  color: white;
+  border-radius: 10px;
 }
